--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iconify-json/simple-icons": "^1.2.42",
     "@nuxt/ui": "^3.2.0",
     "@prisma/client": "^6.11.1",
+    "bcryptjs": "^3.0.2",
     "nuxt": "^3.17.6",
     "nuxt-auth-utils": "^0.5.20",
     "zod": "^4.0.5"
