--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "nuxt": "^3.17.6",
     "nuxt-auth-utils": "^0.5.20",
+    "prisma": "^6.12.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
