--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxt/ui": "^3.2.0",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
-    "nuxt": "^3.17.6",
+    "nuxt": "latest",
     "nuxt-auth-utils": "^0.5.20",
     "prisma": "^6.12.0",
     "zod": "^4.0.5"
